tests/ui/codegen/evm-ir/validation/parse_hotness_metadata.evmir
@module HotnessMetadata

bb0 [hotness=cold]: //~ ERROR: expected `cold`
  stop
